Update messaging API.
 - separate box and signing keys
 - add signature to messages
 - verify message hash & signature on server
